--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		Menu:
 		<a href="index.html">Textos</a>
 		<a href="listas.html">Listas</a>
+		<a href="tabla.html">Tablas</a>
+		<a href="imagenes.html">Galeria</a>
+		
+		
 	</nav>
 	
 	<hr>
