--- a/listas.html
+++ b/listas.html
@@ -15,6 +15,11 @@
 		Menu:
 		<a href="index.html">Textos</a>
 		<a href="listas.html">Listas</a>
+		<a href="tabla.html">Tablas</a>
+		<a href="imagenes.html">Galeria</a>
+		
+
+		
 	</nav>
 
 
